Add control to location user and move to it
- Add type declaration file, though finally the type is not really
  needed in code.

- Tried adding second control to existing control container.
  Give up because react seems re-added the controls for some reason.

- Icon is modified from
  https://www.svgrepo.com/svg/481024/compass
  (public domain license)

--- a/src/components/map.module.scss
+++ b/src/components/map.module.scss
@@ -45,4 +45,11 @@
   svg {
     fill: slategray;
   }
+
+  :global(.leaflet-right .leaflet-control) {
+    margin-right: 8px;
+  }
+  :global(.leaflet-bottom .leaflet-control) {
+    margin-bottom: 8px;
+  }
 }
