User area picker function
Provide 1 slot for user to set his favorite area.

- Load user (including one "my area") server side with `getWorldUsers`
  and pass it to client components.

- Add first server action `saveUserArea`, would be better than api
  endpoint since the code is focus closely to page logic.

  Use <button> without <form> to submit dynamically crafted `formData`,
  has tried some Canary stuff like <form> + `useFormStatus` but
  eventually go back to this stage.

- Adjust some Tooltip default about mouse reacting.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,8 +26,19 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+@layer components {
+  .btn {
+    @apply py-1 px-2 rounded cursor-pointer focus:outline-none focus:ring disabled:cursor-not-allowed disabled:opacity-75;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .dotted-stroke {
+    stroke-dasharray: 3;
+    stroke-dashoffset: 2;
   }
 }
