--- a/src/components/form.module.scss
+++ b/src/components/form.module.scss
@@ -18,6 +18,21 @@
     margin-right: 2px;
   }
 
+  &[data-invalid] {
+    border-radius: 6px;
+    border: 0.8px solid rgb(252, 165, 165);
+    box-shadow: rgb(255, 255, 255) 0 0 0 0, rgba(254, 202, 202, 0.8) 0 0 0 3px, rgba(0, 0, 0, 0.05) 0 1px 2px 0;
+  }
+
+  :global(.react-aria-DateSegment)[data-placeholder=true] {
+    opacity: .6;
+
+    &[data-type="year"],
+    &[data-type="month"],
+    &[data-type="day"] {
+      font-family: 'Noto Sans TC', ui-sans-serif, system-ui, sans-serif;
+    }
+  }
 }
 
 .calender {
