--- a/src/components/form.module.scss
+++ b/src/components/form.module.scss
@@ -66,6 +66,10 @@
       > div {
         padding: 3px 6px;
         border-radius: 100%;
+
+        &[aria-label^='今天'] {
+          border: 1px dashed blue;
+        }
       }
 
       &[aria-selected] > div {
