Use linkify-react to make URL in desc linkable
Only support https links.

Also tried `react-markdown` and `markdown-to-jsx`, both are not easy to
customize.

--- a/src/components/map.module.scss
+++ b/src/components/map.module.scss
@@ -63,6 +63,7 @@
   :global(.leaflet-popup-content) {
     font-size: 1rem;
     margin: 6px 10px 9px 10px;
+    min-width: clamp(10vw, 22rem, 40vw);
   }
 }
 
