Style fixes for small screen
- Give sidebar data-role and aria-expanded, to be able to adjust style
  with CSS according to sidebar shown/hidden state.

  Here add top padding to timeline when sidebar is hidden, otherwise the
  menu button will obscure the content.

- Ensure SideControl content visible, not be obscured by sidebar title.

--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -11,6 +11,10 @@
   }
 }
 
+:global(div[data-role="sidebar"][aria-expanded="false"]) + div .timeline {
+  padding-top: 2.5em;
+}
+
 .line {
   position: absolute;
   left: 3px;
