--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -61,3 +61,18 @@
     vertical-align: middle;
   }
 }
+
+.strikethrough {
+  ::after {
+    content: '';
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: red;
+    opacity: 0.8;
+    transform: rotate(-20deg);
+    transform-origin: center;
+  }
+}
