Style adjustments for fact anchor, list in origin
- Put anchor in timeline dots is hard to touch, and frequently toggle
  its visibility feels too obtrusive.

  So change the anchor to end of title (before tags) and only show it
  when hover the title bar.

- Make lists in origin has dot marker.
  Also make different color for links to highlight them.

--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -29,6 +29,10 @@
   p {
     padding-block: 0.25rem;
   }
+
+  a[href] {
+    color: #0c4a6e;
+  }
 }
 
 .summary-mark {
@@ -45,6 +49,9 @@
 }
 
 .origin {
+  a[href] {
+    color: #0c4a6e;
+  }
   a[href]:hover {
     color: black;
     background-color: rgba(56, 189, 248, 0.19);
@@ -59,6 +66,10 @@
     background-position: center;
     margin-right: 2px;
     vertical-align: middle;
+  }
+
+  ul, ol {
+    list-style: inside;
   }
 }
 
