--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -28,11 +28,43 @@
       }
     }
   }
+
+  &[data-mark-offscreen='up'] .mark-offscreen-up,
+  &[data-mark-offscreen='down'] .mark-offscreen-down {
+    display: block;
+  }
 }
 
 .peeking-target {
   box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.5);
   border-radius: 6px;
+}
+
+.mark-offscreen-up,
+.mark-offscreen-down {
+  display: none;
+  position: sticky;
+  filter: drop-shadow(rgba(0,0,0,0.3) 1rem 0.5rem 8px);
+  right: 0;
+  width: 100%;
+  height: 0;
+  z-index: 30;
+  > div {
+    position: absolute;
+    right: 0.5em;
+  }
+}
+.mark-offscreen-up {
+  top: 3em;
+  > div {
+    top: 0;
+  }
+}
+.mark-offscreen-down {
+  bottom: 2em;
+  > div {
+    bottom: 1em;
+  }
 }
 
 .animate-flash {
