Add date filter for timeline
Compare date as strings.

Should also cover values like `B.C. 5000` and consider it earlier than
e.g., `1900`.

--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -159,3 +159,14 @@
     transform-origin: center;
   }
 }
+
+.ctrl-date-filter {
+  > div:first-child {
+    > label {
+      display: none;
+    }
+    > input {
+      margin-left: 0;
+    }
+  }
+}
