Experimental <figure> usage in tinyMCE area
Prepare to save <img> with specially crafted <figure>, then transform it
during render to let it take advantage of nextjs Image.

Minor change package.json cms commands to explicitly cd to local folder,
avoid taking smart cdpath into account.

--- a/src/app/insights/[id]/article.module.scss
+++ b/src/app/insights/[id]/article.module.scss
@@ -147,6 +147,14 @@
     padding-inline: 0.5rem;
   }
 
+  :global(figure.feeders-mce-figure) {
+    margin-inline: auto;
+
+    > img {
+      margin-inline: auto;
+    }
+  }
+
   :global(table.feeders-mce-digit) {
     td {
       font-family: 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", monospace;
