Find images from WYSIWYG, replace with next/image
The design is to use local CMS when development, stores images on R2.

With next/image and custom loaders, can switch to R2 or Cloudinary on
production.

This requires custom directus extension to save `cms_file_ids` field
when every WYSIWYG field change. Because directus currently has no
relationship between WYSIWYG and its uploaded directus_files records.

- Define directus PUBLIC_URL env, this is required for detecting
  directus image URL in `{PUBLIC_URL}/assets/{id}.png` form.

- To use html-dom-parser on cloudflare/next-on-pages environment, has to
  modify webpack module config to fix an nextjs issue:
  nextjs loads client version (requires browser) of parser
  implementation, thus die with error like:

      This browser does not support
      `document.implementation.createHTMLDocument`

  https://github.com/remarkablemark/html-react-parser/issues/736#issuecomment-2042055711

- Now insight `content` will be parsed and transformed in server side,
  turn HTML string into React elements.

    <figure class='.feeders-mce-figure'><img src=... /></figure>

  becomes

    <img src=... width=... height=...>

- Remove `Html` function (which uses `dangerouslySetInnerHTML`) in
  Insight page. But use it in Timeline page to replace the a bit old
  implementation.

- Add R2 and Cloudinary loaders, though currently not used.

--- a/src/app/insights/[id]/article.module.scss
+++ b/src/app/insights/[id]/article.module.scss
@@ -70,6 +70,7 @@
   }
 
   > p,
+  > img,
   > table,
   > figure {
     margin-inline: auto;
@@ -147,12 +148,9 @@
     padding-inline: 0.5rem;
   }
 
-  :global(figure.feeders-mce-figure) {
+  :global(.feeders-mce-figure) {
     margin-inline: auto;
-
-    > img {
-      margin-inline: auto;
-    }
+    margin-block: 1rem;
   }
 
   :global(table.feeders-mce-digit) {
