Also find iframe in WYSIWYG and render differently
Will only use <iframe> as large block-level content (e.g., video or
interactive diagram).

Define custom format `.feeders-mce-iframe` to target such iframes
precisely. Note the format is applied to <p>, that is because TinyMCE
wraps iframe with <p>. We will extract them and render to top-level.

- Calculate aspect-ratio by width/height and set `style` attribute
  explicitly, to allow `height: auto` works.

- Add CSP FRAME_SRC variable to directus, otherwise they were blocked.

- Add `cms-restart` command to easier such extension-reload required
  development.

--- a/src/app/insights/[id]/article.module.scss
+++ b/src/app/insights/[id]/article.module.scss
@@ -160,6 +160,16 @@
     }
   }
 
+  :global(iframe.feeders-mce-iframe) {
+    max-width: 100%;
+    margin-inline: auto;
+    margin-block: 1rem;
+    background-color: white;
+    &[style] {
+      height: auto;
+    }
+  }
+
   a[href] {
     color: #0c4a6e;
   }
