--- a/src/app/insights/[id]/article.module.scss
+++ b/src/app/insights/[id]/article.module.scss
@@ -29,15 +29,17 @@
   --meta-width: 100%;
   width: var(--meta-width);
   padding-inline: 4px;
+  padding-block: 8px;
   margin-top: -18px;
   text-align: right;
   opacity: 0.7;
 
   @media screen and (min-width: 1024px) {
     --meta-width: fit-content;
+    padding-block: 0;
     margin-top: 0;
     position: absolute;
-    right: 0;
+    right: 4px;
     top: 0;
   }
 }
