--- a/src/app/insights/[id]/article.module.scss
+++ b/src/app/insights/[id]/article.module.scss
@@ -48,6 +48,7 @@
   --content-max-width: 100%;
   --content-width: 95%;
   --table-border-color: silver;
+  --font-mono: 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", monospace;
 
   width: var(--content-max-width);
   outline: 1px solid blue;
@@ -155,9 +156,17 @@
     margin-block: 1rem;
   }
 
+  :global(a.feeders-mce-lengthy) {
+    font-family: var(--font-mono);
+
+    // text-sm
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   :global(table.feeders-mce-digit) {
     td {
-      font-family: 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", monospace;
+      font-family: var(--font-mono);
       text-align: right;
     }
   }
@@ -174,5 +183,10 @@
 
   a[href] {
     color: #0c4a6e;
+  }
+
+  a:hover {
+    color: black;
+    background-color: rgba(253, 224, 71, .55);
   }
 }
