--- a/src/components/sitemap.module.scss
+++ b/src/components/sitemap.module.scss
@@ -1,6 +1,9 @@
 .container {
   container-type: inline-size;
+  container-name: sitemap-menu;
+
   --bg-color: #fff7ed;
+
   width: 100%;
 }
 
@@ -10,11 +13,11 @@
   width: 100%;
   margin: auto;
 
-  @container (min-width: 240px) {
-    padding: 3em 0;
+  @container sitemap-menu (min-width: 240px) {
+    padding: 5cqi 0;
   }
 
-  @container (min-width: 460px) {
+  @container sitemap-menu (min-width: 460px) {
     width: 440px;
     padding: 3em 2em;
   }
@@ -31,7 +34,7 @@
   padding: 1em 0;
   position: relative;
 
-  @container (min-width: 240px) {
+  @container sitemap-menu (min-width: 240px) {
     width: 240px;
     padding: 1em;
   }
@@ -39,22 +42,27 @@
   > div {
     display: flex;
     align-items: center;
+    padding-left: 1em;
+
+    @container sitemap-menu (min-width: 240px) {
+      padding-left: 0;
+    }
 
     a {
       display: flex;
       align-items: center;
 
-      @container (min-width: 240px) {
+      @container sitemap-menu (min-width: 240px) {
         position: absolute;
+
+        &:hover {
+          filter: drop-shadow(rgba(0,0,50,0.3) 0 40px 3px);
+        }
       }
 
       &:hover {
         transform: scale(1.1);
         transition: transform 90ms ease-in;
-        filter: drop-shadow(rgba(0,0,50,0.3) 0 40px 3px);
-
-        span {
-        }
       }
     }
   }
