--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -4,6 +4,8 @@
   background-position: 12px 0;
   background-repeat: no-repeat;
 
+  padding-bottom: 2.5em;
+
   &[data-view-ctrl-desc="hide"] div[data-role="desc"],
   &[data-view-ctrl-summary="hide"] div[data-role="summary"],
   &[data-view-ctrl-origin="hide"] div[data-role="origin"] {
@@ -98,12 +100,35 @@
 }
 
 .mce {
+  --font-mono: 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", monospace;
+  font-size: 0.9375rem;
+  line-height: 1.35rem;
+
   p {
-    padding-block: 0.25rem;
+    padding-block: 0.5rem;
   }
 
   a[href] {
     color: #0c4a6e;
+  }
+
+  ul, ol {
+    list-style: outside circle;
+    margin-left: 1em;
+
+    ul, ol {
+      list-style-type: square;
+      font-size: 0.875rem;
+      line-height: 1.25rem;
+    }
+  }
+
+  :global(a.feeders-mce-lengthy) {
+    font-family: var(--font-mono);
+
+    // text-sm
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -142,6 +167,12 @@
 
   ul, ol {
     list-style: inside;
+
+    ul, ol {
+      margin-left: 1em;
+      list-style-type: square;
+      line-height: 1.25rem;
+    }
   }
 }
 
