--- a/src/app/laws/laws.module.scss
+++ b/src/app/laws/laws.module.scss
@@ -4,7 +4,8 @@
   background-position: 12px 0;
   background-repeat: no-repeat;
 
-  &[data-view-ctrl-body="hide"] div[data-role="body"] {
+  &[data-view-ctrl-body="hide"] div[data-role="body"],
+  &[data-view-ctrl-penalty="hide"] div[data-role="penalty"] {
     display: none;
   }
 
@@ -97,11 +98,33 @@
 }
 
 .penalty {
-
+  ul, ol {
+    list-style: outside;
+    line-height: 1.125;
+    li {
+      margin-left: 1em;
+      margin-block: 4px;
+    }
+  }
 }
 
 .body {
   container-type: inline-size;
+
+  [data-role='summary'] {
+    ul, ol {
+      list-style: outside;
+      li {
+        margin-left: 1em;
+        margin-block: 4px;
+      }
+    }
+
+    ol {
+      list-style-position: inside;
+      list-style-type: decimal;
+    }
+  }
 }
 
 .judgements {
@@ -110,9 +133,14 @@
     margin-right: auto;
   }
 
+  summary:hover {
+    background-color: rgba(240, 171, 252, .5);
+  }
+
   &[open] {
     summary {
-      background-color: gold;
+      color: black;
+      background-color: rgba(240, 171, 252, .9);
     }
   }
 
@@ -150,6 +178,10 @@
     li {
       margin-left: 2em;
       margin-block: 4px;
+    }
+
+    ul, ol {
+      list-style-type: circle;
     }
   }
 }
