Fix <ol> not using decimal marker
Also adjust style a bit.

--- a/src/app/laws/laws.module.scss
+++ b/src/app/laws/laws.module.scss
@@ -123,6 +123,9 @@
     ol {
       list-style-position: inside;
       list-style-type: decimal;
+      li::marker {
+        color: #777;
+      }
     }
   }
 }
