--- a/src/app/facts/timeline.module.scss
+++ b/src/app/facts/timeline.module.scss
@@ -113,13 +113,27 @@
   }
 
   ul, ol {
-    list-style: outside circle;
+    list-style-position: outside;
     margin-left: 1em;
 
     ul, ol {
-      list-style-type: square;
       font-size: 0.875rem;
       line-height: 1.25rem;
+    }
+    ul {
+      list-style-type: square;
+    }
+  }
+  ul {
+    list-style-type: circle;
+  }
+  ol {
+    list-style-type: decimal;
+    margin-left: 1.25rem;
+    li::marker {
+      font-style: italic;
+      font-size: smaller;
+      color: #666;
     }
   }
 
@@ -166,12 +180,14 @@
   }
 
   ul, ol {
-    list-style: inside;
+    list-style-position: inside;
 
     ul, ol {
       margin-left: 1em;
-      list-style-type: square;
       line-height: 1.25rem;
+    }
+    ul {
+      list-style-type: square;
     }
   }
 }
