Backport space/digits fonts from charts repo
Differences:

- Here we don't have `geist-sans` usage.

- Only do `preload` in Facts page, will really use it later.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,20 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --font-space: 'BootleqSpace';
+  --font-digits: 'GeistMonoDigits';
+}
+
+@font-face {
+  font-family: 'BootleqSpace';
+  src: url('/assets/BootleqSpace.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'GeistMonoDigits';
+  src: url('/assets/GeistMonoDigits.woff2') format('woff2');
+  font-display: swap;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -43,5 +57,9 @@ body {
   .break-anywhere {
     overflow-wrap: anywhere;
     word-break: break-all;
+  }
+
+  .font-mixed {
+    font-family: var(--font-space), var(--font-digits), 'Microsoft JhengHei', 'Noto Sans TC', 'PingFang', 'LiHei Pro', 'Meiryo', 'MS Gothic', sans-serif;
   }
 }
