CSS highlight filtering keyword, use in Facts page
- Add `findRanges` to search keyword in given DOM node, find all
  occurrences (may accross DOM nodes) and build Ranges for them.

- Add `KeywordHighlighter` component to manage highlights in given
  container.

  Take `segmentSelector` prop to narrow down "segments", only handle
  segments within viewport (visible), for performance.

  Beside keyword changes, also watches scroll and resize event to ensure
  update.

- Update <Timeline> to expose its <div> ref to parent.

- Note Firefox currently doesn't support text-decoration in ::highlight.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,10 @@ body {
   .btn {
     @apply py-1 px-2 rounded cursor-pointer focus:outline-none focus:ring disabled:cursor-not-allowed disabled:opacity-75;
   }
+
+  ::highlight(text-filter) {
+    @apply bg-pink-200 underline decoration-wavy decoration-red-500;
+  }
 }
 
 @layer utilities {
