Add test to facts text filter highlight
- Only test screenshot on 1 fact element, to reduce the chance that
  result changed only because of data update.

- Update highlight style, it is weird that old background-color doesn't
  appear in chrome test (while text-decoration works fine).

  Also consider that red wavy line might look like spell error, so it's
  also good to change.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
   }
 
   ::highlight(text-filter) {
-    @apply bg-pink-200 underline decoration-wavy decoration-red-500;
+    @apply bg-pink-200/95 underline decoration-wavy decoration-rose-300 decoration-1;
   }
 }
 
