Enhance pick saving workflow
- Fix background saving action, the getPickById must allow fetching
  draft item (of the logged-in user).

- After save, instead of staying in the Form or moving to Item view, now
  change to move to "my" list.

  And add an effect to automatically scroll + highlight the updated
  item.

  Also, after "cancel" the edit form, bring user to "my" list, too.

- After save, refresh both 'index' and 'my' items.

  Also handle the case not updating existing record, but added new,
  which required to prepend a new item instead of merely replacing.

--- a/src/app/facts/picks.module.scss
+++ b/src/app/facts/picks.module.scss
@@ -10,3 +10,19 @@
     }
   }
 }
+
+.animate-flash {
+  animation: feeders-picks-flash 1.4s ease-in-out 1;
+}
+
+@keyframes feeders-picks-flash {
+  0% {
+    background-color: white;
+  }
+  10% {
+    background-color: yellow;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
