Change the separators between PickRow items
Previous pseudo element still has some drawbacks, now change to use a
dumb React component, easier to control its appearance.

Fix that dropped items were having background color "including" the
separator lines.

Also minor increase spacing around headers.

--- a/src/app/facts/picks.module.scss
+++ b/src/app/facts/picks.module.scss
@@ -1,12 +1,7 @@
 .pick-list {
   li {
-    &:not(:first-child):before {
-      content: '';
-      display: block;
-      width: 98%;
-      height: 1px;
-      margin: 5px auto 20px;
-      border-top: 1px dotted rgb(59 130 246 / 0.5);
+    &:last-child [role='separator'] {
+      display: none;
     }
   }
 }
