Allow switch Pick list to "compact" headers view
Add a button to bring up view mode menu, allow to choose "header" view,
which hides detail "desc" content and change the style to make titles
outstanding.

The button should only appear for large screen.

--- a/src/app/facts/picks.module.scss
+++ b/src/app/facts/picks.module.scss
@@ -4,6 +4,44 @@
       display: none;
     }
   }
+
+  &[data-display-mode="header"] {
+
+    > li {
+      position: relative;
+
+      &:not(:last-child) {
+        header {
+          border-bottom: 1px dashed #666;
+        }
+      }
+
+      header {
+        > div:nth-of-type(2) {
+          justify-content: end;
+        }
+      }
+
+      @media screen and (min-width: 768px) {
+        header {
+          > div:first-child {
+            position: relative;
+
+            h2,
+            [data-role='dummy-h2'] {
+              position: absolute;
+              top: 50%;
+            }
+          }
+        }
+      }
+    }
+
+    .desc,
+    [role='separator'] {
+      display: none;
+    }
+  }
 }
 
 .animate-flash {
