Minor adjust vertical alignment of <Desc> links
Manually doing some pixel offset.

--- a/src/app/facts/picks.module.scss
+++ b/src/app/facts/picks.module.scss
@@ -44,6 +44,13 @@
   }
 }
 
+.desc {
+  a[href] {
+    display: inline-block;
+    transform: translateY(-1px);
+  }
+}
+
 .animate-flash {
   animation: feeders-picks-flash 1.4s ease-in-out 1;
 }
