--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  text-autospace: normal;
 }
 
 @layer components {
