Fix LinkPreview image loading flashing
Also disable pointer-events on spinner element (previously we only
disable it on the outer container), otherwise the spinner can block the
mouseover event and cause mouseout, lead to preview interrupted.

--- a/src/components/link-preview.module.scss
+++ b/src/components/link-preview.module.scss
@@ -1,6 +1,7 @@
 .spinner {
   animation: feeders-fade-in 1.2s ease-in-out 1;
   animation-fill-mode: forwards;
+  pointer-events: none;
 }
 
 @keyframes feeders-fade-in {
